[tool.poetry]
name = "herberry-proto"
version = "0.1.0"
description = "Simple proto for herberry app"

authors = ["Andrey Gordeev <gordeev.and.and@gmail.com>"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
pytesseract = "^0.3.0"
opencv-python = "^4.1.1.26"
pymongo = "^3.9.0"
scrapy = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest-flask = "^0.15.0"
pytest-pythonpath = "^0.7.3"
mock = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
